--- a/style.css
+++ b/style.css
@@ -8,5 +8,12 @@
   display: flex;
   background-color: rgb(50, 167, 145);
   flex: 1;
-  height: 100px;
+  height: 14vh;
+  padding: 1em 1.5em;
+  justify-content: space-between;
+}
+
+.trybewarts-login {
+  display: flex;
+  align-self: center;
 }
