--- a/style.css
+++ b/style.css
@@ -17,3 +17,12 @@
   display: flex;
   align-self: center;
 }
+
+main {
+  display: flex;
+}
+
+#evaluation-form {
+  display: flex;
+  width: 675px;
+}
