--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
+/* Reset */
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
+/* Header da página */
 .header {
   display: flex;
   background-color: rgb(50, 167, 145);
@@ -18,14 +20,22 @@
   align-self: center;
 }
 
+/* Conteúdo principal */
 main {
   display: flex;
 }
 
+/* Logo gradão */
+#trybewarts-forms-logo {
+  height: 500px;
+}
+
+/* Formulário de inscrição */
 #evaluation-form {
   display: flex;
   flex-direction: column;
   width: 675px;
+  padding: 1em 3em;
 }
 
 .full-name-container {
@@ -40,6 +50,8 @@ main {
   display: flex;
 }
 
-#trybewarts-forms-logo {
-  height: 500px;
+.family-input-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75em;
 }
